fix UI: avoid hovered text overflow

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -49,7 +49,6 @@ h3.method_title_gallery:hover::after {
     border-radius: 4px;
     left: 0;
     white-space: normal;
-    width: max-content;
     z-index: 10;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
